syntax = "proto3";

package booking;

option go_package = "genproto/booking";


service BookingService {
  rpc CreateBooking(CreateBookingRequest) returns (BookingResponse);
  rpc GetBooking(IdRequest) returns (BookingResponse);
  rpc UpdateBooking(UpdateBookingRequest) returns (BookingResponse);
  rpc CancelBooking(IdRequest) returns (BookingResponse);
  rpc ListBookings(ListBookingsRequest) returns (ListBookingsResponse);
}

service ServiceManagementService {
  rpc CreateService(CreateServiceRequest) returns (ServiceResponse);
  rpc GetServiceByID(IdRequest) returns (ServiceResponse);
  rpc UpdateService(UpdateServiceRequest) returns (ServiceResponse);
  rpc DeleteService(IdRequest) returns (Void);
  rpc ListServices(ListServicesRequest) returns (ListServicesResponse);
}

service PaymentService {
  rpc CreatePayment(CreatePaymentRequest) returns (PaymentResponse);
  rpc GetPayment(IdRequest) returns (PaymentResponse);
  rpc ListPayments(ListPaymentsRequest) returns (ListPaymentsResponse);
}

service ReviewService {
  rpc CreateReview(CreateReviewRequest) returns (ReviewResponse);
  rpc UpdateReview(UpdateReviewRequest) returns (ReviewResponse);
  rpc GetReviewById(IdRequest) returns (ReviewResponse);
  rpc DeleteReview(IdRequest) returns (Void);
  rpc ListReviews(ListReviewsRequest) returns (ListReviewsResponse);
}

service ProviderSearchService {
  rpc SearchProviders(SearchProvidersRequest) returns (SearchProvidersResponse);
  rpc SearchServices(SearchServicesRequest) returns (SearchServicesResponse);
}

message CreateBookingRequest {
  string user_id = 1;
  string provider_id = 2;
  string service_id = 3;
  string scheduled_time = 4;
  GeoPoint location = 5;
}

message Void{}

message UpdateBookingRequest {
  string id = 1;
  string service_id = 2;
}

message IdRequest {
  string id = 1;
}

message ListBookingsRequest {
  string user_id = 1;
  int32 page = 2;
  int32 limit = 3;
}

message ListBookingsResponse {
  repeated BookingResponse bookings = 1;
}

message   BookingResponse {
  string id = 1;
  string user_id = 2;
  string provider_id = 3;
  string service_id = 4;
  string status = 5;
  string scheduled_time = 6;
  GeoPoint location = 7;
  double total_price = 8;
  string created_at = 9;
  string updated_at = 10;
}

message CreateServiceRequest {
  string name = 1;
  string description = 2;
  double price = 3;
  int32 duration = 4;  // Duration in minutes
}

message UpdateServiceRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 duration = 5;
}

message ListServicesRequest {
  int32 page = 1;
  int32 limit = 2;
}

message ListServicesResponse {
  repeated ServiceResponse services = 1;
}

message ServiceResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 duration = 5;
  string created_at = 6;
  string updated_at = 7;
}

message CreatePaymentRequest {
  string booking_id = 1;
  double amount = 2;
  string payment_method = 3;
  string transaction_id = 4;
}

message ListPaymentsRequest {
  string user_id = 1;
  int32 page = 2;
  int32 limit = 3;
}

message ListPaymentsResponse {
  repeated PaymentResponse payments = 1;
}

message PaymentResponse {
  string id = 1;
  string booking_id = 2;
  double amount = 3;
  string status = 4;
  string payment_method = 5;
  string transaction_id = 6;
  string created_at = 7;
  string updated_at = 8;
}


message CreateReviewRequest {
  string booking_id = 1;
  string user_id = 2;
  string provider_id = 3;
  float rating = 4;  // Rating from 1 to 5
  string comment = 5;
}

message UpdateReviewRequest {
  string id = 1;
  float rating = 2;  // Rating from 1 to 5
  string comment = 3;
}

message ListReviewsRequest {
  string provider_id = 1;
  int32 page = 2;
  int32 limit = 3;
}

message ListReviewsResponse {
  repeated ReviewResponse reviews = 1;
}

message ReviewResponse {
  string id = 1;
  string booking_id = 2;
  string user_id = 3;
  string provider_id = 4;
  float rating = 5;
  string comment = 6;
  string created_at = 7;
  string updated_at = 8;
}


message SearchProvidersRequest {
  string location = 1;
  repeated string services = 2;
  string availability = 3;
  int32 page = 4;
  int32 limit = 5;
}

message SearchProvidersResponse {
  repeated ProviderResponse providers = 1;
}

message ProviderResponse {
  string id = 1;
  string user_id = 2;
  string company_name = 3;
  string description = 4;
  repeated string services = 5;
  double average_rating = 6;
  GeoPoint location = 7;
  string created_at = 8;
  string updated_at = 9;
}

message SearchServicesRequest {
  string provider_id = 1;
  int32 page = 2;
  int32 limit = 3;
}

message SearchServicesResponse {
  repeated ServiceResponse services = 1;
}

message GeoPoint {
  double latitude = 1;
  double longitude = 2;
}

message Pagination{
  int32 limit =1;
  int32 page =2;
}